# ocaml-aws

./: CHANGES.md  Makefile  aws-dynamodb.opam
libraries/dynamodb/lib/: createTable.mli  dune
libraries/dynamodb/lib_test/: dune
